--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -10,24 +10,35 @@ src/application.c
 
 # All test source files
 TEST_SRC = src/application.c\
-test/test_application.c\
+test/application.c\
 unity/unity.c\
 
-TEST_OUTPUT = $(BUILD)/Test_$(PROJECT_NAME)
+TEST_OUTPUT = $(BUILD)/Test_$(PROJECT_NAME).out
 
 # All include folders with header files
 INC	= -Iinc\
 -Iunity\
 
-#Library Inlcudes
-#INCLUDE_LIBS = 
-INCLUDE_LIBS = -lcunit
+
 
 # Project Output name
-PROJECT_OUTPUT = $(BUILD)/$(PROJECT_NAME)
+PROJECT_OUTPUT = $(BUILD)/$(PROJECT_NAME).out
 
 # Document files
 DOCUMENTATION_OUTPUT = documentation/html
+
+
+ ifdef OS
+    RM = rm
+    FixPath = $(subst /,\,$1)
+    EXEC = exe
+ else
+    ifeq ($(shell uname), Linux)
+       RM = rm -rf
+       FixPath = $1
+ 	    EXEC = out
+    endif
+ endif
 
 # Default target built
 $(PROJECT_NAME):all
@@ -36,11 +47,11 @@ $(PROJECT_NAME):all
 .PHONY: run clean test doc all
 
 all: $(SRC) $(BUILD)
-	gcc $(SRC) $(INC) -o $(PROJECT_OUTPUT)
+	gcc $(SRC) $(INC) -o $(call FixPath,$(PROJECT_OUTPUT))
 
 # Call `make run` to run the application
 run:$(PROJECT_NAME)
-	./$(PROJECT_OUTPUT)
+	./$(call FixPath,$(PROJECT_OUTPUT))
 
 # Document the code using Doxygen
 doc:
@@ -48,25 +59,9 @@ doc:
 
 # Build and run the unit tests
 test:$(BUILD)
-	gcc $(TEST_SRC) $(INC) -o $(TEST_OUTPUT) $(INCLUDE_LIBS)
-	./$(TEST_OUTPUT)
+	gcc $(TEST_SRC) $(INC) -o $(call FixPath,$(TEST_OUTPUT).$(EXEC))
+	./$(call FixPath,$(TEST_OUTPUT).$(EXEC))
 
-analyze: test memcheck staticcheck coverage sanitize_check
-
-staticcheck:
-	cppcheck --enable=all -iunity .
-
-memcheck:
-	valgrind ./$(TEST_OUTPUT)
-
-sanitize_check:
-	gcc -fsanitize=address -fno-omit-frame-pointer $(TEST_SRC) $(INC) -o $(TEST_OUTPUT) $(INCLUDE_LIBS)
-	./$(TEST_OUTPUT)
-
-coverage:$(TEST_SRC)
-	gcc -fprofile-arcs -ftest-coverage $(TEST_SRC) $(INC) -o $(TEST_OUTPUT) $(INCLUDE_LIBS)
-	./$(TEST_OUTPUT)
-	gcov -a application.c
 
 # Remove all the built files, invoke by `make clean`
 clean:
