--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -46,7 +46,7 @@ $(PROJECT_NAME):all
 # Run the target even if the matching name exists
 .PHONY: run clean test doc all
 
-all: $(SRC) $(BUILD)
+	$(SRC) $(BUILD)
 	gcc $(SRC) $(INC) -o $(call FixPath,$(PROJECT_OUTPUT))
 
 # Call `make run` to run the application
